# fantasy-pl-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISTRIBUTION.md  LICENSE  PYPI.md  PYPI_SETUP_CHANGES.md  README.md  glama.json  install.bat  install.sh  install_mcp.py  pyproject.toml  setup.py  validate.sh
.github/workflows/: package-check.yml  publish-to-pypi.yml  python-test.yml
claude_instructions/: distribution_and_os_instructions.md  fixture_support.md  mvp_instructions.md  player_analysis.md  release_instructions.md
scripts/: README.md  schema_extractor.py
server/: README.md  config.py  requirements.txt  server.py  test_api.py
server/fpl/: __init__.py  api.py  cache.py
server/fpl/resources/: __init__.py  gameweeks.py  players.py  teams.py
server/fpl/tools/: __init__.py  comparisons.py
src/fpl_mcp/: __init__.py  __main__.py  cli.py  config.py
src/fpl_mcp/fpl/: __init__.py  api.py  auth_manager.py  cache.py  credential_manager.py  rate_limiter.py
src/fpl_mcp/fpl/resources/: __init__.py  fixtures.py  players.py  teams.py
src/fpl_mcp/fpl/tools/: __init__.py  comparisons.py  leagues.py  managers.py  players.py  simplified_decision.py  team.py
src/fpl_mcp/fpl/utils/: __init__.py
tests/: README.md  conftest.py  mock_mcp.py  test_api.py  test_basic.py
